swager modification
